--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>Cambiar Background por medio de codigo</title>
+	<title>Los colores del Arco Iris</title>
 </head>
 <style type="text/css">
 	a
@@ -10,23 +10,42 @@
 		color: black;
 		text-decoration: none;
 	}
+	article
+	{
+		background: lightgray;
+		padding: 12px;
+	}
+	body
+	{
+		background: lightgray;
+	}
+	h1
+	{
+		color: white;
+	}
+	header
+	{
+		background: black;
+		padding: 12px;
+		text-align: center;
+	}
 	nav
 	{
 		background: black;
-		padding: 5px;
+		padding: 12px;
 	}
 
 	nav ul
 	{
 		list-style: none;
-		padding: 3px
 		text-align: center;
+		padding: 5px;
 	}
 
 	nav ul li
 	{
 		display: inline-block;
-		padding: 2px;
+		padding: 5px;
 	}
 	.red
 	{
@@ -44,22 +63,71 @@
 	{
 		background: yellow;
 	}
-	.white
+	.orange
 	{
-		background: white;
+		background: orange;
 	}
-
+	.indigo
+	{
+		background: indigo;
+	}
+	.purple
+	{
+		background: purple;
+	}
+	.active
+	{
+		display: block;
+	}
+	.inactive
+	{
+		display: none;
+	}
 </style>
 <body>
+	<header>
+		<h1>Los Colores del Arco Iris</h1>
+	</header>
 	<nav>
 		<ul>
 			<li data-color="0" class="red"><a href="#">Red</a> </li>
 			<li data-color="1" class="green"><a href="#">Green</a> </li>
 			<li data-color="2" class="blue"><a href="#">Blue</a> </li>
 			<li data-color="3" class="yellow"><a href="#">Yellow</a> </li>
-			<li data-color="4" class="white"><a href="#">White</a> </li>
+			<li data-color="4" class="orange"><a href="#">orange</a> </li>
+			<li data-color="5" class="indigo"><a href="#">indigo</a> </li>
+			<li data-color="6" class="purple"><a href="#">purple</a></li>
 		</ul>
 	</nav>
+	<section>
+		<article class="main">
+			<p>El arco iris es simplemente un efecto óptico, que podemos ver en los días lluviosos en el cielo. Consiste en que las diminutas gotas de agua dejan pasar los rayos del Sol a través suya. Provocando que se expulse el espectro de luces total. O sea todos los colores básicos que existen. Ordenados siendo en el exterior el rojo y en el arco interior tendríamos el violeta.
+			 </p>
+			<p>En esta pequeña aplicación vas a poder conocer un poco mas de los 7 colores del arcoiris, solo clickea en la sección de arriba sobre el color que quieras ver y aprende un poco mas acerca de el significado de estos colores.</p> 
+			
+		</article>
+		<article class="red inactive">
+			<p>Es el color que simboliza la vida y la pasión. Además, es el color por excelencia para expresar que se siente amor verdadero</p>
+		</article>
+		<article class="green inactive">
+			<p>El verde representa la esperanza y los deseos de un futuro mejor.</p>
+		</article>
+		<article class="blue inactive">
+			<p>Es el color que representa la tranquilidad, la calma y la paz espiritual.</p>
+		</article>
+		<article class="yellow inactive">
+			<p>El amarillo es un color que brinda alegría, felicidad y simboliza la fortuna.</p>
+		</article>
+		<article class="orange inactive">
+			<p>Este color tiene se relaciona con la energía interior. El naranja es un color que alegra al alma y ayuda a transmitir energía positiva</p>
+		</article>
+		<article class="indigo inactive">
+			<p>También llamado morado, es el color que simboliza las fantasías y los sueños.</p>
+		</article>
+		<article class="purple inactive">
+			<p>Este color también tiene un significado espiritual, ya que se conecta con la paz y la búsqueda del equilibrio interior en todas las actividades que se emprenden, así como la transformación de lo negativo en positivo.</p>
+		</article>
+	</section>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 <script type="text/javascript">
 
@@ -69,7 +137,21 @@
 		var userPick = $(this).attr('data-color');
 
 		$(this).click(function(){
+
 			$('body').css('background', color[userPick].textContent);
+			var mainArticle = document.getElementsByClassName('main');
+			mainArticle[0].classList.add('inactive');
+
+			for (var i = color.length - 1; i >= 0; i--) 
+			{
+
+				var articlesToHide = document.getElementsByClassName(color[i].className);
+				articlesToHide[1].classList.add('inactive');
+			};
+
+			var articleToShow = document.getElementsByClassName(color[userPick].className);
+			articleToShow[1].classList.remove('inactive');
+
 		})
 	});
 
