Contenido en los colores
Se introdujo mas contenido en las descipciones de los Colores para que
se vea mas poblado e interesante la pagina

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 	{
 		background: lightgray;
 		padding: 12px;
+		text-align: center;
+	}
+	article h2
+	{
+		border-bottom: 2px solid beige;
 	}
 	body
 	{
@@ -49,15 +54,18 @@
 	}
 	.red
 	{
-		background: red
+		background: red;
+		color: beige;
 	}
 	.green
 	{
 		background: green;
+		color: beige;
 	}
 	.blue
 	{
 		background: blue;
+		color: beige;
 	}
 	.yellow
 	{
@@ -70,10 +78,12 @@
 	.indigo
 	{
 		background: indigo;
+		color: beige;
 	}
 	.purple
 	{
 		background: purple;
+		color: beige;
 	}
 	.active
 	{
@@ -101,31 +111,129 @@
 	</nav>
 	<section>
 		<article class="main">
+			<h2>Los Colores del Arco Iris</h2>
+
 			<p>El arco iris es simplemente un efecto óptico, que podemos ver en los días lluviosos en el cielo. Consiste en que las diminutas gotas de agua dejan pasar los rayos del Sol a través suya. Provocando que se expulse el espectro de luces total. O sea todos los colores básicos que existen. Ordenados siendo en el exterior el rojo y en el arco interior tendríamos el violeta.
 			 </p>
 			<p>En esta pequeña aplicación vas a poder conocer un poco mas de los 7 colores del arcoiris, solo clickea en la sección de arriba sobre el color que quieras ver y aprende un poco mas acerca de el significado de estos colores.</p> 
 			
 		</article>
 		<article class="red inactive">
-			<p>Es el color que simboliza la vida y la pasión. Además, es el color por excelencia para expresar que se siente amor verdadero</p>
+			<h2>El Rojo</h2>
+
+			<p>
+				El rojo simboliza el poder, color al que se asocia con la vitalidad y la ambición.
+
+				El rojo aporta también confianza en sí mismo, coraje y una actitud optimista ante la vida.
+
+				Pero también tiene su aspecto negativo y puede expresar rabia.
+
+				Si estamos rodeado de demasiado rojo, puede influirnos negativamente y volvernos irritables, impaciente e inconformista.
+
+				El color rojo está asociado con los signos Aries y Escorpio
+
+				Las palabras claves del color rojo son: Atracción, amor, pasión, deseo, amor.
+			</p>
 		</article>
 		<article class="green inactive">
-			<p>El verde representa la esperanza y los deseos de un futuro mejor.</p>
+			<h2>El Verde</h2>
+
+			<p>
+				El verde tiene una fuerte afinidad con la naturaleza y nos conecta con ella, nos hace empatizar con los demás encontrando de una forma natural las palabras justas.
+ 
+				Es el color que buscamos instintivamente cuando estamos deprimidos o acabamos de vivir un trauma. El verde nos crea un sentimiento de confort y relajación, de calma y paz interior, que nos hace sentir equilibrados interiormente.
+
+				Meditar con el color verde, es como tomarse un calmante, para las emociones. El verde oscuro representa el principio de la muerte y es indescriptible. es la negación de la vida y la alegría.
+
+				El verde lima o el verde oliva, pueden tener un efecto perjudicial, tanto físicamente como emocionalmente.
+
+				Cuando se juntan el verde y el amarillo, pueden despertar sentimientos de envidia, resentimiento y posesión.
+
+				El color verde está asociado a los signos Tauro, Libra, Virgo, Capricornio (verde oscuro) Acuario y Piscis (verde mar).
+
+				Las palabras claves del color verde son: naturaleza, armonía, crecimiento, exuberancia, fertilidad, frescura, estabilidad, resistencia. Verde oscuro: dinero.
+			</p>
 		</article>
 		<article class="blue inactive">
-			<p>Es el color que representa la tranquilidad, la calma y la paz espiritual.</p>
+			<h2>El Azul</h2>
+
+			<p>
+				El azul es un color fresco, tranquilizante y se le asocia con la mente, a la parte más intelectual de la mente, igual que el amarillo
+ 
+				El azul representa la noche. El azul marino, nos hace sentir relajados y tranquilos, como el inmenso y oscuro mar durante la noche.
+
+				El azul claro y el azul cielo, nos hacen sentir tranquilos y protegidos de todo el alboroto y las actividades del día; también es aconsejable contra el insomnio.
+
+				El oscuro azul de medianoche, ejerce como un fuerte sedante sobre la mente, permitiéndonos conectar con nuestra parte femenina e intuitiva. Demasiado azul oscuro, puede producirnos depresión.
+
+				El azul ayuda a controlar la mente, a tener claridad de ideas y a ser creativos.
+
+				El color azul está asociado a los signos piscis, libra, acuario y sagitario.
+
+				Palabras claves del color azul: estabilidad, profundidad, lealtad, confienza, sabiduría, inteligencia, fe, verdad, eternidad.
+
+				Azul marino: conocimiento, lo mental, integridad, poder, seriedad.
+
+				Azul Claro: generosidad, salud, curación, frescor, entendimiento, tranquilidad.
+			</p>
 		</article>
 		<article class="yellow inactive">
-			<p>El amarillo es un color que brinda alegría, felicidad y simboliza la fortuna.</p>
+			<h2>El Amarillo</h2>
+
+			<p>
+				El color amarillo es también un color que aporta la felicidad.
+
+				Es un color brillante, alegre, que simboliza el lujo y el como estar de fiesta cada día. Se asocia con la parte intelectual de la mente y la expresión de nuestros pensamientos
+
+				Es por lo tanto, el poder de discernir y discriminar, la memoria y las ideas claras, el poder de decisión y capacidad de juzgarlo todo.
+
+				También ayuda a ser organizado, a asimilar las ideas innovadoras y aporta la habilidad de ver y comprender los diferentes puntos de vista.
+
+				Por otro lado, la parte negativa de este color, es que puede aportale el miedo o temor a ciertas cosas.
+
+				El color amarillo está asociado los signos Géminis, Leo (amarillo oscuro), Tauro (amarillo y ocre), Virgo.
+			</p>
 		</article>
 		<article class="orange inactive">
-			<p>Este color tiene se relaciona con la energía interior. El naranja es un color que alegra al alma y ayuda a transmitir energía positiva</p>
+			<h2>El Naranja</h2>
+
+			<p>
+				El naranja es un color alegre.
+
+				Este color libera las emociones negativas, le hace sentir menos inseguro, menos penoso, más comprensivo con los defectos de los demás y le aporta ganas de perdonarlo todo.
+
+				El naranja estimula la mente, renueva la ilusión en la vida y es el perfecto antidepresivo.
+
+				Es ideal para el espíritu. El color albaricoque o melocotón, es ideal para los nervios.
+
+				El color naranja está asociado al signo Leo.
+
+				Las palabras claves del color naranja son: energía, alegría, felicidad, atracción, creatividad.
+			</p>
 		</article>
 		<article class="indigo inactive">
-			<p>También llamado morado, es el color que simboliza las fantasías y los sueños.</p>
+			<h2>El Morado</h2>
+
+			<p>
+				Calma y tranquiliza a los pacientes, que sufren problemas mentales y nerviosos.
+
+				Es un color muy poderoso para la psíque, se le asocia con el funcionamiento del cerebro y es un estimulante de la imaginación y de la intuición. También es un fuerte sendante.
+
+				Esta asociados a los signos Piscis, Acuario y Sagitario.
+			</p>
 		</article>
 		<article class="purple inactive">
-			<p>Este color también tiene un significado espiritual, ya que se conecta con la paz y la búsqueda del equilibrio interior en todas las actividades que se emprenden, así como la transformación de lo negativo en positivo.</p>
+			<h2>El Purpura</h2>
+
+			<p>
+				Calma y tranquiliza a los pacientes, que sufren problemas mentales y nerviosos.
+
+				Color de transformación al más alto nivel espiritual y mental, capas de combatir los miedos y aportar paz. Tienen un efecto de limpieza en los trastornos emocionales. Nos conecta también con los impulsos musicales y artísticos, el misterio y la sensibilidad a la belleza y los grandes ideales, inspirándonos sensibilidad, espiritualidad y compasión.
+
+				El color morado está asociado con la protección psíquica.
+
+				Esta asociados a los signos Piscis, Acuario y Sagitario.
+			</p>
 		</article>
 	</section>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
